# user_app

./: db.sqlite3  pyproject.toml  requirements.txt
user_app/: settings.py  urls.py
user_manager/: admin.py  forms.py  helpers.py  models.py  urls.py  views.py
user_manager/migrations/: 0001_initial.py
user_manager/static/js/: users.js
user_manager/templates/: base.html  index.html  users.html
